--- a/auto-shop-project/app/globals.css
+++ b/auto-shop-project/app/globals.css
@@ -25,3 +25,60 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+
+.container {
+  font-family: Roboto;
+  /* overflow-y: scroll; */
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  background-color: #856666; /* light gray */
+  width: 100vw;
+}
+
+.logo {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.navigation a {
+  font-size: 18px;
+  margin-left: 20px;
+  text-decoration: none;
+  color: black;
+  transition: color 0.3s;
+}
+
+.navigation a:hover {
+  color: blue;
+}
+
+.main-content {
+  position: relative;
+  width: 100vw;
+  height: 700px; /* Adjust as needed */
+}
+
+.background-image {
+  width: 100vw;
+  height: 100%;
+  object-fit: cover;
+}
+
+.centered-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px 20px;
+  border-radius: 5px;
+}
