--- a/auto-shop-project/app/globals.css
+++ b/auto-shop-project/app/globals.css
@@ -15,8 +15,11 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+@media (min-width:750px){
+  
+}
 body {
+   /* Adjust this value to your preference */
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,55 +27,134 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
 }
+.image-div{
+  width:auto;
+  height:auto;
+  max-width: 30%;
+  max-height: 20vw;
+  margin: 20px;
+  box-shadow: 0 0 7px 7px rgba(255, 255, 255, 0.2);
+}
+.image-flex{
+  width:100vw;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap:wrap;
+}
+.route-head{
+  width: 100vw;
+  font-size: 54px;
+  text-align: center;
+  padding-top: 40px;
+}
+.contact-subheader{
+  font-size:23px;
+  background-color: rgb(188, 185, 185);
+  width: 400px;
+  height: 37px;
+  margin:auto;
+  border-radius: 4px;
+}
+#form-box{
+  background-color: gray;
+  width: 75vw;
+  margin: auto;
+  border-radius: 10px;
+  text-align:center;
+  color: black;
+  font-size:20px;
+  padding-top:15px;
+  font-weight:600;
+}
+.submit-container{
+  /* text-align:center; */
+  font-size:16px;
+  border-radius: 10px;
+  margin: auto;
+  width: 75vw;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap:wrap;
+}
+.submit-box{
+  color:black;
+  width: calc(100% * (1/2) - 10px - 1px);  
+  padding: 15px;
+  /* border:solid; */
+  border-color: red;
 
+}
+.input-box{
+  width: 60%;
+  margin-left: 15px;
+  background-color:rgb(230, 230, 230);
+  float:right;
+  height:40px;
+  border-radius:5px;
+  font-weight:250;
+  padding-left:7px;
 
+}
+.subtext{
+  width:100vw;
+  font-size: 24px;
+  text-align:center;
+  color: rgb(191, 191, 191);
+  margin-bottom: 50px;
+}
 .container {
-  font-family: Roboto;
+  font-family: 'Oswald', sans-serif;
   /* overflow-y: scroll; */
 }
 
 .header {
+  font-family: 'Oswald', sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px;
-  background-color: #856666; /* light gray */
+  background-color: #323232; /* light gray */
   width: 100vw;
+  height: 5vw;
 }
 
 .logo {
-  font-size: 24px;
+  margin-left: 15px;
+  font-size: 26px;
   font-weight: bold;
 }
 
 .navigation a {
   font-size: 18px;
   margin-left: 20px;
+  margin-right: 10px;
   text-decoration: none;
-  color: black;
+  color: rgb(255, 255, 255);
   transition: color 0.3s;
 }
 
 .navigation a:hover {
-  color: blue;
+  color: rgb(131, 131, 131);
 }
 
 .main-content {
   position: relative;
   width: 100vw;
-  height: 700px; /* Adjust as needed */
+  height: 50vw; /* Adjust as needed */
 }
 
 .background-image {
   width: 100vw;
   height: 100%;
   object-fit: cover;
+  opacity: 60%;
 }
 
 .centered-text {
   position: absolute;
-  top: 50%;
+  top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 24px;
@@ -82,3 +164,5 @@ body {
   padding: 10px 20px;
   border-radius: 5px;
 }
+
+
