--- a/auto-shop-project/app/globals.css
+++ b/auto-shop-project/app/globals.css
@@ -19,7 +19,6 @@
   
 }
 body {
-   /* Adjust this value to your preference */
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -45,7 +44,7 @@ body {
 }
 .route-head{
   width: 100vw;
-  font-size: 54px;
+  font-size: 50px;
   text-align: center;
   padding-top: 40px;
 }
@@ -80,6 +79,7 @@ body {
 }
 .submit-box{
   color:black;
+  font-size:19px;
   width: calc(100% * (1/2) - 10px - 1px);  
   padding: 15px;
   /* border:solid; */
@@ -95,7 +95,32 @@ body {
   border-radius:5px;
   font-weight:250;
   padding-left:7px;
-
+  font-size: 15px;
+}
+#message-box{
+  width:400px;
+  border-radius:5px;
+  background-color:rgb(230, 230, 230);
+  font-size: 14px;
+  height: 100px;
+  padding-left: 5px;
+}
+#appt-button{
+  background-color: rgb(242, 57, 57);
+  padding:14px;
+  border-radius:4px;
+  margin: 15px;
+}
+#appt-button:hover{
+  background-color: rgb(242, 91, 91);
+}
+.service-li{
+  margin-left: 7px;
+  
+}
+.service-li:hover{
+  margin-left: 7px;
+  color: rgb(125, 77, 77);
 }
 .subtext{
   width:100vw;
@@ -115,9 +140,9 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 15px;
-  background-color: #323232; /* light gray */
+  background-color: #323232; 
   width: 100vw;
-  height: 5vw;
+  height: 70px;
 }
 
 .logo {
@@ -142,17 +167,18 @@ body {
 .main-content {
   position: relative;
   width: 100vw;
-  height: 50vw; /* Adjust as needed */
+  height: 100%; 
 }
 
 .background-image {
   width: 100vw;
-  height: 100%;
+  height: calc(100vh - 70px);
   object-fit: cover;
   opacity: 60%;
 }
 
 .centered-text {
+  text-align:center;
   position: absolute;
   top: 42%;
   left: 50%;
@@ -166,3 +192,13 @@ body {
 }
 
 
+.service-block{
+  width:100%;
+  border:solid;
+  border-color:white;
+  height: calc(100vh - 70px);
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
