--- a/auto-shop-project/app/globals.css
+++ b/auto-shop-project/app/globals.css
@@ -15,9 +15,6 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-@media (min-width:750px){
-  
-}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -26,134 +23,136 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-
 }
-.image-div{
-  width:auto;
-  height:auto;
+.image-div {
+  width: auto;
+  height: auto;
   max-width: 30%;
   max-height: 20vw;
   margin: 20px;
   box-shadow: 0 0 7px 7px rgba(255, 255, 255, 0.2);
 }
-.image-flex{
-  width:100vw;
+.image-flex {
+  width: 100vw;
   display: flex;
   justify-content: space-evenly;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
 }
-.route-head{
+.route-head {
+  color: white;
   width: 100vw;
   font-size: 50px;
   text-align: center;
   padding-top: 40px;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: rgb(0, 0, 0);
-
 }
 
-.contact-subheader{
-  font-size:23px;
+.contact-subheader {
+  font-size: 23px;
   background-color: rgb(188, 185, 185);
   width: 400px;
   height: 37px;
-  margin:auto;
+  margin: auto;
   border-radius: 4px;
 }
-#form-box{
+#form-box {
   background-color: gray;
   width: 75vw;
   margin: auto;
   border-radius: 10px;
-  text-align:center;
+  text-align: center;
   color: black;
-  font-size:20px;
-  padding-top:15px;
-  font-weight:600;
+  font-size: 20px;
+  padding-top: 15px;
+  font-weight: 600;
 }
-.submit-container{
+.submit-container {
   /* text-align:center; */
-  font-size:16px;
+  font-size: 16px;
   border-radius: 10px;
   margin: auto;
   width: 75vw;
   display: flex;
   justify-content: space-evenly;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
 }
-.submit-box{
-  color:black;
-  font-size:19px;
-  width: calc(100% * (1/2) - 10px - 1px);  
+.submit-box {
+  color: black;
+  font-size: 19px;
+  width: calc(100% * (1 / 2) - 10px - 1px);
   padding: 15px;
   /* border:solid; */
   border-color: red;
-  
-  
-
 }
-.input-box{
+.input-box {
   width: 60%;
   margin-left: 15px;
-  background-color:rgb(230, 230, 230);
-  float:right;
-  height:35px;
-  border-radius:5px;
-  font-weight:250;
-  padding-left:7px;
+  background-color: rgb(230, 230, 230);
+  float: right;
+  height: 35px;
+  border-radius: 5px;
+  font-weight: 250;
+  padding-left: 7px;
   font-size: 15px;
 }
-#message-box{
-  width:400px;
-  border-radius:5px;
-  background-color:rgb(230, 230, 230);
+#message-box {
+  width: 400px;
+  border-radius: 5px;
+  background-color: rgb(230, 230, 230);
   font-size: 14px;
   height: 100px;
   padding-left: 5px;
 }
-#appt-button{
+#appt-button {
   background-color: rgb(242, 57, 57);
-  padding:14px;
-  border-radius:4px;
+  padding: 14px;
+  border-radius: 4px;
   margin: 15px;
 }
-#appt-button:hover{
+#appt-button:hover {
   background-color: rgb(242, 91, 91);
 }
-.service-li{
+.service-li {
   margin-left: 7px;
 }
-.service-li:hover{
+.service-li:hover {
   margin-left: 7px;
   color: rgb(125, 77, 77);
 }
-.subtext{
-  width:100vw;
+.subtext {
+  width: 100vw;
   font-size: 24px;
-  text-align:center;
+  text-align: center;
   color: rgb(191, 191, 191);
   margin-bottom: 50px;
 }
 .container {
-  font-family: 'Oswald', sans-serif;
-  /* overflow-y: scroll; */
+  font-family: "Oswald", sans-serif;
+  background-color: black;
+  min-width: 100vw;
 }
 
 .header {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px;
-  background-color: #323232; 
+  background-color: #323232;
   width: 100vw;
   height: 70px;
+  position: fixed;
+  z-index: 1000;
 }
 
 .logo {
   margin-left: 15px;
-  font-size: 26px;
+  font-size: 27px;
   font-weight: bold;
+  color: white;
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: rgb(0, 0, 0);
 }
 
 .navigation a {
@@ -172,7 +171,7 @@ body {
 .main-content {
   position: relative;
   width: 100vw;
-  height: 100%; 
+  height: 100%;
 }
 
 .background-image {
@@ -180,10 +179,13 @@ body {
   height: calc(100vh - 70px);
   object-fit: cover;
   opacity: 60%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
 }
 
 .centered-text {
-  text-align:center;
+  text-align: center;
   position: absolute;
   top: 42%;
   left: 50%;
@@ -195,23 +197,49 @@ body {
   padding: 10px 20px;
   border-radius: 5px;
 }
+.service-header {
+  font-size: 40px;
+}
 
-
-.service-block{
-  width:100%;
-  border:solid;
-  border-color:white;
+.service-block {
+  width: 100%;
+  /* border-bottom: solid; */
+  border-style:dashed;
+  /* border-color: red; */
   height: calc(100vh - 70px);
   min-height: 400px;
+  display: flex;
+  /* align-items: center;
+  justify-content: center; */
+}
+.service-text {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  color: white;
+}
+
+.service-image-div {
+  background-color:black;
+  width: 50%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.links{
+.service-image {
+  height: 80%;
+  width: 95%;
+  border-radius: 4px;
+}
+.links {
   text-decoration: underline;
 }
-.links:hover{
+.links:hover {
   color: rgb(91, 91, 249);
 }
 
