--- a/auto-shop-project/app/globals.css
+++ b/auto-shop-project/app/globals.css
@@ -227,9 +227,11 @@ body {
   height: calc(100vh - 70px);
   object-fit: cover;
   opacity: 60%;
-  background-repeat: no-repeat;
+  background-repeat:repeat-x;
   background-position: center center;
   background-attachment: fixed;
+  /* transform:translate(-2%, 0) ; */
+  /* overflow: */
 }
 
 .centered-text {
